--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,13 @@
     "96": "logo.png",
     "128": "logo.png"
   },
+  "action": {
+    "default_title": "About Simple Wiki Direct",
+    "default_icon": "logo.png"
+  },
+  "background": {
+    "scripts": ["background.js"]
+  },
   "content_scripts": [
     {
       "matches": ["*://*.wikipedia.org/*"],
@@ -16,4 +23,3 @@
     }
   ]
 }
-
